--- a/.travis.yml
+++ b/.travis.yml
@@ -12,9 +12,9 @@ cache: cargo
 
 install:
   - export PATH="$PATH:$HOME/.cargo/bin"
-  - if [[ TRAVIS_RUST_VERSION == "nightly" ]]; then which rustfmt || cargo install rustfmt-nightly; fi;
+  - if [[ "$TRAVIS_RUST_VERSION" == "nightly" ]]; then which rustfmt || cargo install rustfmt-nightly; fi;
 
 script:
-  - if [[ TRAVIS_RUST_VERSION == "nightly" ]]; then cargo fmt -- --write-mode=diff; fi;
+  - if [[ "$TRAVIS_RUST_VERSION" == "nightly" ]]; then cargo fmt -- --write-mode=diff; fi;
   - cargo build
   - cargo test
