--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,10 +18,11 @@ license = "MIT"
 name = "nom_bibtex"
 
 [dependencies]
-nom = "7.1.0"
+nom = "8.0"
 quick-error = "2.0"
 nom-tracable = "0.9"
-nom_locate = "4.1"
+nom_locate = "5.0"
+nom-language = "0.1"
 
 [features]
 default = []
